--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8"/>
-  <title>qrcode-chrome</title> 
+  <title>qrcode-lite</title> 
 
   <link rel="stylesheet" href="css/popup.css" type="text/css" />
 </head>
@@ -17,7 +17,6 @@
     </div>
 
   <script src="js/vue.min.js" type="text/javascript"></script>
-  <script src="js/jquery.min.js" type="text/javascript"></script>
   <script src="js/qrcode.min.js" type="text/javascript"></script>
   <script src="js/popup.js" type="text/javascript"></script>
 </body>
