Remove unused code

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8"/>
-  <title>qrcode-lite</title> 
+  <title>qrcode-chrome</title> 
 
   <link rel="stylesheet" href="css/popup.css" type="text/css" />
 </head>
